--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@use-gesture/react": "^10.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
