--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
     "name": "02_woori-component",
-    "private": false,
     "version": "0.0.2",
     "type": "module",
+    "main": "./dist/index.umd.js",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "require": "./dist/index.umd.js"
+        },
+        "./style.css": "./dist/style.css"
+    },
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.18",
         "@use-gesture/react": "^10.3.1",
-        "react": "^19.2.0",
-        "react-dom": "^19.2.0",
-        "tailwind-scrollbar-hide": "^4.0.0",
-        "tailwindcss": "^4.1.18"
+        "tailwind-scrollbar-hide": "^4.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
+        "@tailwindcss/vite": "^4.1.18",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
         "@vitejs/plugin-react": "^5.1.1",
@@ -26,6 +36,13 @@
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
         "globals": "^16.5.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
+        "tailwindcss": "^4.1.18",
         "vite": "^7.2.4"
+    },
+    "peerDependencies": {
+        "react": ">=19.0.0",
+        "react-dom": ">=19.0.0"
     }
 }
