--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
     "name": "02_woori-component",
-    "version": "0.0.3",
+    "version": "0.0.6",
     "type": "module",
     "main": "./dist/index.umd.js",
-    "module": "./dist/index.js",
+    "module": "./dist/index.es.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/index.js",
+            "import": "./dist/index.es.js",
             "require": "./dist/index.umd.js"
         },
-        "./style.css": "./dist/style.css"
+        "./style.css": "./dist/02_woori-component.css"
     },
     "files": [
         "dist"
